{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 266,
  "lineage": "6bd874fe-6f9d-fa7d-bca2-a12aff79af97",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s-jenkins",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-06-26T13:34:18.863-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "k8s-jenkins",
            "name": "k8s-jenkins",
            "network": "https://www.googleapis.com/compute/v1/projects/mykubeadm/global/networks/default",
            "priority": 1000,
            "project": "mykubeadm",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mykubeadm/global/firewalls/k8s-jenkins",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "jenkins"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s-nodeport",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-06-26T13:34:19.170-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "k8s-nodeport",
            "name": "k8s-nodeport",
            "network": "https://www.googleapis.com/compute/v1/projects/mykubeadm/global/networks/default",
            "priority": 1000,
            "project": "mykubeadm",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mykubeadm/global/firewalls/k8s-nodeport",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8snodeport"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s-jenkins",
      "provider": "provider.google"
    }
  ]
}